[gd_scene load_steps=3 format=3 uid="uid://cf1sh28pl8bbu"]

[ext_resource type="Script" path="res://ui/media_properties/media_properties.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cas13pywr4ltf" path="res://gfx/default_background.png" id="2_frn5q"]

[node name="MediaPropertiesDialog" type="Window"]
size = Vector2i(400, 110)
min_size = Vector2i(400, 110)
script = ExtResource("2")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_frn5q")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IDContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="IDLabel" type="Label" parent="MarginContainer/VBoxContainer/IDContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "ID:"

[node name="IDValue" type="LineEdit" parent="MarginContainer/VBoxContainer/IDContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="IDCopy" type="Button" parent="MarginContainer/VBoxContainer/IDContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Copy"

[node name="PathContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PathLabel" type="Label" parent="MarginContainer/VBoxContainer/PathContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "Path:"

[node name="PathValue" type="LineEdit" parent="MarginContainer/VBoxContainer/PathContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="PathCopy" type="Button" parent="MarginContainer/VBoxContainer/PathContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Copy"

[node name="BottomButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RegenerateThumbButton" type="Button" parent="MarginContainer/VBoxContainer/BottomButtons"]
layout_mode = 2
text = "Regenerate Thumbnail"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/IDContainer/IDCopy" to="." method="_on_id_copy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PathContainer/PathCopy" to="." method="_on_path_copy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomButtons/RegenerateThumbButton" to="." method="_on_regenerate_thumb_button_pressed"]
